--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -26,7 +26,7 @@
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
 
-    <div data-duration="5" class="alioth-page-loader" data-layout="dark">
+    <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
