--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
-    <div data-duration="5" class="alioth-page-loader" data-layout="dark">
+    <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
@@ -38,7 +38,7 @@
 
             <div class="site-branding">
 
-                <div class="site-logo">
+                <div class="site-logo logo">
                     <a href="index.html">
                         <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg">
                         <!-- <img alt="Site Logo Light" class="light-logo" src="/assets/resources/img/enigma-en-logo.svg"> -->
@@ -84,7 +84,7 @@
 
             <div class="header-widgets">
 
-                <div class="menu-toggle">
+                <div class="menu-toggle" data-magnetic="" data-cursor="-opaque">
                     <span class="toggle-line"></span>
                     <span class="toggle-line"></span>
                 </div>
