--- a/about.html
+++ b/about.html
@@ -26,8 +26,7 @@
 </head>
 
 
-<body data-barba="wrapper" style="background: #fff;" data-header-sticky="true" data-menu-style="overlay"
-    data-page-loader="true">
+<body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
     <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
@@ -294,7 +293,7 @@
                 </section>
 
                 <!-- Team Sec -->
-                <div class="grdient" data-bgcolor="#000">
+                <div class="grdient" data-bgcolor="#000" data-humcolor="#fff">
                     <!-- <img class="bg-team" src="/assets/resources/img/our-team.png" alt=""> -->
                     <!-- <section class="team-s" data-humcolor="#fff" data-scroll>
                         <div class="container text_anim">
@@ -1885,7 +1884,7 @@
                         </div>
                     </section>  -->
                     <!-- About Logos -->
-                    <section class="client-section" data-humcolor="#fff" data-scroll>
+                    <section class="client-section" data-scroll>
 
                         <!-- <div class="concept" data-scroll>
                             <figure data-scroll data-scroll-speed="1">
@@ -2078,12 +2077,13 @@
 
 
     <script src="/assets/vendors/lib/plugins.js"></script>
-    <script src="/assets/resources/js/pages-js/preloader.js"></script>
+
     <script src="./assets/resources/js/cursor.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="/assets/resources/js/pages-js/preloader.js"></script>
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
