--- a/quickx1.html
+++ b/quickx1.html
@@ -87,8 +87,8 @@
 
     <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
-            <div class="wrapper active" data-bgcolor="#f2f2f2">
-                <div id="start" class="qu" data-humcolor="#fff" style="background:#0E0F13;">
+            <div class="wrapper active" data-bgcolor="#fff">
+                <div id="start" class="qu" data-humcolor="#fff" style="background:radial-gradient( #000346, #030019);">
                     <div class="el1 el-bg"></div>
                     <div class="el2 el-bg"></div>
                     <div class="el3 el-bg"></div>
