--- a/strategy.html
+++ b/strategy.html
@@ -183,7 +183,7 @@
                 </section>
 
                 <!-- Scroll Section -->
-                <div class="scroll-sec2" data-humcolor="#fff">
+                <div class="scroll-sec2">
                     <div class="back-text" data-scroll>
                         <h1 class="opacity-0" data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal">
                             <span>Approach &
