--- a/index.html
+++ b/index.html
@@ -1048,21 +1048,10 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
-                                                <a href="#">
-                                                    <img src="/assets/resources/img/work-kedar-mobile.png">
-                                                    <h2><span>03</span>Kedarkala</h2>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <div class="content">
-                                            <div class="port o-image" data-scroll>
-                                                <a href="#">
+                                                <a href="dmtca.html">
                                                     <img src="/assets/resources/img/DMTCA-mobile-work.png">
                                                     <h2><span>02</span>Dmtca</h2>
                                                 </a>
@@ -1073,8 +1062,38 @@
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/pdtl-mobile-work.png">
-                                                    <h2><span>04</span>Pdtl</h2>
+                                                    <img src="/assets/resources/img/QuickX-mobile-Work.png">
+                                                    <h2><span>03</span>Quickx</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port o-image" data-scroll>
+                                                <a href="certvault.html">
+                                                    <img src="/assets/resources/img/m-certvault.png">
+                                                    <h2><span>04</span>Certvault</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port o-image" data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/Patrapay-work-mobile.png">
+                                                    <h2><span>05</span>Patra Pay</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port o-image" data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/work-kedar-mobile.png">
+                                                    <h2><span>06</span>Kedarkala</h2>
                                                 </a>
                                             </div>
                                         </div>
@@ -1084,7 +1103,7 @@
                                             <div class="port o-image" data-scroll>
                                                 <a href="#">
                                                     <img src="/assets/resources/img/dharan-mobile-work.png">
-                                                    <h2><span>06</span>Dharan</h2>
+                                                    <h2><span>07</span>Dharan</h2>
                                                 </a>
                                             </div>
                                         </div>
@@ -1093,12 +1112,14 @@
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/QuickX-mobile-Work.png">
-                                                    <h2><span>05</span>Quickx</h2>
+                                                    <img src="/assets/resources/img/pdtl-mobile-work.png">
+                                                    <h2><span>08</span>Pdtl</h2>
                                                 </a>
                                             </div>
                                         </div>
                                     </div>
+
+
 
                                 </div>
                                 <div class="swiper-pagination"></div>
