--- a/contact.html
+++ b/contact.html
@@ -145,9 +145,7 @@
                      </div>
                      <div class='gf_browser_chrome enform_wrapper enform_legacy_markup_wrapper' id='enform_wrapper_2'>
                         <div id='gf_2' class='enform_anchor' tabindex='-1'></div>
-                        <form accept-charset="UTF-8" id='ajaxForm'
-                           action="https://getform.io/f/381a4d26-aedc-47ca-8a7e-53ba94592541" method="POST"
-                           target="_blank">
+                        <form accept-charset="UTF-8" id='ajaxForm' action="" method="POST" target="_blank">
                            <div class='enform_body enform-body'>
                               <ul id='enform_fields_2'
                                  class='enform_fields top_label form_sublabel_below description_below'>
