--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         alt=""></span>
 
                 <ul class="menu main-menu">
-                    <li class="menu-item"><a href="about.html"> About</a></li>
+                    <li class="menu-item"><a href="about.html">About.</a></li>
                     <li class="menu-item has-children"><a> Expertises</a>
 
                         <ul class="sub-menu">
@@ -64,19 +64,21 @@
                         </ul>
 
                     </li>
-                    <li class="menu-item"><a href="works.html">Works</a></li>
-                    <li class="menu-item"><a href="blogs.html"> Insights</a>
+                    <li class="menu-item"><a href="works.html">Works.</a></li>
+                    <li class="menu-item"><a href="blogs.html"> Insights.</a>
                     </li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
+                    <li class="menu-item"><a href="contact.html">Contact.</a></li>
                 </ul>
 
 
                 <div class="menu-widget menu-widget-right">
                     <ul class="social-list">
-                        <li><a href="index.html#.">Facebook</a></li>
-                        <li><a href="index.html#.">Instagram</a></li>
-                        <li><a href="index.html#.">Twitter</a></li>
-                        <li><a href="index.html#.">LinkedIn</a></li>
+                        <li><a href="https://www.facebook.com/in.enigmadigital" target="_blank">//Facebook</a></li>
+                        <li><a href="https://www.instagram.com/enigmadigital/" target="_blank">//Instagram</a></li>
+                        <li><a href="https://twitter.com/_EnigmaDigital" target="_blank">//Twitter</a></li>
+                        <li><a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank">//LinkedIn</a>
+                        </li>
+                        <li><a href="https://www.behance.net/enigma-digital" target="_blank">//Behance</a></li>
                     </ul>
                 </div>
             </div>
@@ -90,7 +92,44 @@
                 </div>
 
             </div>
+            <div class="nav__showreel">
+                <div class="txt--p6 git-button">View</div>
+                <div class="buttons">
+                    <div class="button git-button">
+                        <a href="#" class="open-showreel" class="git-button" data-cursor-type="medium"
+                            data-cursor="-opaque">
+                            <div class="texts">Our showreel</div>
+                            <div class="line"></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="nav__newsletter-talk">
+                <div class="nav__newsletter">
+                    <div class="txt--p6 git-button">Get the</div>
+                    <div class="buttons">
+                        <div class="button">
+                            <a href="" data-cursor-type="medium" data-cursor="-opaque" class="git-button">
+                                <div class="texts">Enigma newsletter</div>
+                                <div class="line"></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="nav__lets-talk">
+                    <div class="txt--p6 git-button">Lets talk</div>
+                    <div class="buttons">
+                        <div class="button">
+                            <a href="mailto:hi@weareenigma.com" class="git-button" data-cursor-type="medium"
+                                data-cursor="-opaque">
+                                <div class="texts">hi@weareenigma.com</div>
+                                <div class="line"></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
         </div>
     </div>
 
