--- a/works.html
+++ b/works.html
@@ -147,12 +147,12 @@
                                         </a>
                                     </div>
                                     <div class="cas-project">
-                                        <a href="" data-cursor-text="View" data-cursor=" -color-cert">
+                                        <a href="certvault.html" data-cursor-text="View" data-cursor=" -color-cert">
                                             <div class="cs-image">
                                                 <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
                                             </div>
                                             <div class="cs-title">
-                                                <a href="" data-cursor-text="View"
+                                                <a href="certvault.html" data-cursor-text="View"
                                                     data-cursor=" -color-cert">Certvault</a>
                                             </div>
                                         </a>
