--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
          <div class="site-branding">
 
-            <div class="site-logo">
+            <div class="site-logo logo">
                <a href="index.html">
                   <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg">
                   <!-- <img alt="Site Logo Light" class="light-logo" src="/assets/resources/img/enigma-en-logo.svg"> -->
@@ -53,7 +53,7 @@
                   alt=""></span>
 
             <ul class="menu main-menu">
-               <li class="menu-item"><a href="about.html"> About</a></li>
+               <li class="menu-item"><a href="about.html">About.</a></li>
                <li class="menu-item has-children"><a> Expertises</a>
 
                   <ul class="sub-menu">
@@ -65,19 +65,26 @@
                   </ul>
 
                </li>
-               <li class="menu-item"><a href="works.html">Works</a></li>
-               <li class="menu-item"><a href="blogs.html"> Insights</a>
+               <li class="menu-item"><a href="works.html">Works.</a></li>
+               <li class="menu-item"><a href="blogs.html"> Insights.</a>
                </li>
-               <li class="menu-item"><a href="contact.html">Contact</a></li>
+               <li class="menu-item"><a href="contact.html">Contact.</a></li>
             </ul>
 
 
             <div class="menu-widget menu-widget-right">
                <ul class="social-list">
-                  <li><a href="index.html#.">Facebook</a></li>
-                  <li><a href="index.html#.">Instagram</a></li>
-                  <li><a href="index.html#.">Twitter</a></li>
-                  <li><a href="index.html#.">LinkedIn</a></li>
+                  <li><a href="https://www.facebook.com/in.enigmadigital" target="_blank" data-magnetic=""
+                        data-cursor="-opaque">//Facebook</a></li>
+                  <li><a href="https://www.instagram.com/enigmadigital/" target="_blank" data-magnetic=""
+                        data-cursor="-opaque">//Instagram</a></li>
+                  <li><a href="https://twitter.com/_EnigmaDigital" target="_blank" data-magnetic=""
+                        data-cursor="-opaque">//Twitter</a></li>
+                  <li><a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank" data-magnetic=""
+                        data-cursor="-opaque">//LinkedIn</a>
+                  </li>
+                  <li><a href="https://www.behance.net/enigma-digital" target="_blank" data-magnetic=""
+                        data-cursor="-opaque">//Behance</a></li>
                </ul>
             </div>
          </div>
@@ -85,13 +92,49 @@
 
          <div class="header-widgets">
 
-            <div class="menu-toggle">
+            <div class="menu-toggle" data-magnetic="" data-cursor="-opaque">
                <span class="toggle-line"></span>
                <span class="toggle-line"></span>
             </div>
 
          </div>
+         <div class="nav__showreel">
+            <div class="txt--p6 git-button">View</div>
+            <div class="buttons">
+               <div class="button git-button">
+                  <a href="#" class="open-showreel" class="git-button" data-cursor-type="medium" data-cursor="-opaque">
+                     <div class="texts">Our showreel</div>
+                     <div class="line"></div>
+                  </a>
+               </div>
+            </div>
+         </div>
+         <div class="nav__newsletter-talk">
+            <div class="nav__newsletter">
+               <div class="txt--p6 git-button">Get the</div>
+               <div class="buttons">
+                  <div class="button">
+                     <a href="" data-cursor-type="medium" data-cursor="-opaque" class="git-button">
+                        <div class="texts">Enigma newsletter</div>
+                        <div class="line"></div>
+                     </a>
+                  </div>
+               </div>
+            </div>
+            <div class="nav__lets-talk">
+               <div class="txt--p6 git-button">Lets talk</div>
+               <div class="buttons">
+                  <div class="button">
+                     <a href="mailto:hi@weareenigma.com" class="git-button" data-cursor-type="medium"
+                        data-cursor="-opaque">
+                        <div class="texts">hi@weareenigma.com</div>
+                        <div class="line"></div>
+                     </a>
+                  </div>
+               </div>
+            </div>
 
+         </div>
       </div>
    </div>
    <main role="main" id="main">
