--- a/index.html
+++ b/index.html
@@ -73,12 +73,17 @@
 
                 <div class="menu-widget menu-widget-right">
                     <ul class="social-list">
-                        <li><a href="https://www.facebook.com/in.enigmadigital" target="_blank">//Facebook</a></li>
-                        <li><a href="https://www.instagram.com/enigmadigital/" target="_blank">//Instagram</a></li>
-                        <li><a href="https://twitter.com/_EnigmaDigital" target="_blank">//Twitter</a></li>
-                        <li><a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank">//LinkedIn</a>
+                        <li><a href="https://www.facebook.com/in.enigmadigital" target="_blank" data-magnetic=""
+                                data-cursor="-opaque">//Facebook</a></li>
+                        <li><a href="https://www.instagram.com/enigmadigital/" target="_blank" data-magnetic=""
+                                data-cursor="-opaque">//Instagram</a></li>
+                        <li><a href="https://twitter.com/_EnigmaDigital" target="_blank" data-magnetic=""
+                                data-cursor="-opaque">//Twitter</a></li>
+                        <li><a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank" data-magnetic=""
+                                data-cursor="-opaque">//LinkedIn</a>
                         </li>
-                        <li><a href="https://www.behance.net/enigma-digital" target="_blank">//Behance</a></li>
+                        <li><a href="https://www.behance.net/enigma-digital" target="_blank" data-magnetic=""
+                                data-cursor="-opaque">//Behance</a></li>
                     </ul>
                 </div>
             </div>
