--- a/index.html
+++ b/index.html
@@ -1341,32 +1341,22 @@
                                 <label>
                                     <input type="checkbox" name="service[]" value="branding">
                                     <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/branding.svg" alt="" />
+                                        <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_o18imdcr.json"
+                                            mode="bounce" background="transparent" speed="1" hover loop></lottie-player>
                                         <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="Branding">Branding</span>
+                                            <span data-text="Strategy">Strategy</span>
                                         </span>
                                     </span>
                                 </label>
                             </div>
                             <div class="en-checkbox en-checkbox_rounded">
                                 <label>
-                                    <input type="checkbox" name="service[]" value="site-design">
+                                    <input type="checkbox" name="service[]" value="design">
                                     <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/web.svg" alt="" />
+                                        <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_w93b7ctb.json"
+                                            mode="bounce" background="transparent" speed="1" hover loop></lottie-player>
                                         <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="Web design">Web design</span>
-                                        </span>
-                                    </span>
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="en-checkbox en-checkbox_rounded">
-                                <label>
-                                    <input type="checkbox" name="service[]" value="app-design">
-                                    <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/app.svg" alt="" />
-                                        <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="App design">App design</span>
+                                            <span data-text="Design">Design</span>
                                         </span>
                                     </span>
                                     </span>
@@ -1374,11 +1364,13 @@
                             </div>
                             <div class="en-checkbox en-checkbox_rounded">
                                 <label>
-                                    <input type="checkbox" name="service[]" value="aso">
+                                    <input type="checkbox" name="service[]" value="Development">
                                     <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/aos.svg" alt="" />
+                                        <lottie-player
+                                            src="https://assets10.lottiefiles.com/packages/lf20_bjuzbdj5.json"
+                                            background="transparent" speed="1" hover loop></lottie-player>
                                         <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="ASO expertise">ASO expertise</span>
+                                            <span data-text="Development">Development</span>
                                         </span>
                                     </span>
                                     </span>
@@ -1386,28 +1378,18 @@
                             </div>
                             <div class="en-checkbox en-checkbox_rounded">
                                 <label>
-                                    <input type="checkbox" name="service[]" value="illustration">
+                                    <input type="checkbox" name="service[]" value="Marketing">
                                     <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/illus.svg" alt="" />
+                                        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_tojmyods.json"
+                                            background="transparent" speed="1" hover loop></lottie-player>
                                         <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="Illustrations">Illustrations</span>
+                                            <span data-text="Marketing">Marketing</span>
                                         </span>
                                     </span>
                                     </span>
                                 </label>
                             </div>
-                            <div class="en-checkbox en-checkbox_rounded">
-                                <label>
-                                    <input type="checkbox" name="service[]" value="css">
-                                    <span class="en-checkbox_rounded-box">
-                                        <img src="/assets/resources/img/form/css.svg" alt="" />
-                                        <span class="en-checkbox_rounded-title" data-magnetic>
-                                            <span data-text="HTML/CSS coding">HTML/CSS coding</span>
-                                        </span>
-                                    </span>
-                                    </span>
-                                </label>
-                            </div>
+
                         </div>
                     </div>
                     <div class="en-form-group top-border">
